opam-version: "1.2"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]
homepage: "https://mjambon.github.io/mjambon2016/yojson-doc/Yojson.html"
bug-reports: "https://github.com/mjambon/yojson/issues"
dev-repo: "https://github.com/mjambon/yojson.git"
available: [ ocaml-version >= "4.02.3"]
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
  "cppo" {build}
  "easy-format"
  "biniou" {>= "1.2.0"}
]
