opam-version: "2.0"
maintainer: ["paul-elliot@tarides.com" "nathan@tarides.com" "marek@tarides.com"]
authors: ["Martin Jambon"]
homepage: "https://github.com/ocaml-community/yojson"
bug-reports: "https://github.com/ocaml-community/yojson/issues"
dev-repo: "git+https://github.com/ocaml-community/yojson.git"
doc: "https://ocaml-community.github.io/yojson/"
license: "BSD-3-Clause"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune"
  "core" {>= "v0.13"}
  "core_bench" {>= "v0.13"}
  "odoc" {with-doc}
]
synopsis:
  "Yojson is an optimized parsing and printing library for the JSON format"
description: """
Benchmarks for Yojson

"""
