(executables
 (names bench conversions)
 (package yojson-bench)
 (public_names yojson-bench -)
 (flags (-safe-string))
 (libraries yojson core_bench core core_unix.command_unix core_bench.internals))

(alias
  (name bench-generic)
  (deps bench.json)
  (action (run ./bench.exe generic)))

(alias
  (name bench-generic-sexp)
  (deps bench.json)
  (action (run ./bench.exe generic -sexp)))

(alias
  (name bench-buffer)
  (deps bench.json)
  (action (run ./bench.exe buffer)))

(alias
  (name bench-buffer-sexp)
  (deps bench.json)
  (action (run ./bench.exe buffer -sexp)))

(alias
  (name bench)
  (deps (alias bench-generic) (alias bench-buffer)))
